WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262104
[WPE][GTK] Symbolize `StackTrace` using `libbacktrace`
https://bugs.webkit.org/show_bug.cgi?id=262104
Summary
[WPE][GTK] Symbolize `StackTrace` using `libbacktrace`
Vitaly Dyackhov
Reported
2023-09-26 01:54:10 PDT
Since we enable `-fvisibility=hidden` and `-fvisibility-hidden-inlines`, `backtrace()` cannot resolver pointer address to function names. We can use `libbacktrace`[1] to symbolize addresses and generate meaningful backtraces. [1]
https://github.com/ianlancetaylor/libbacktrace
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2023-09-26 02:02:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18213
EWS
Comment 2
2023-09-28 06:35:17 PDT
Committed
268579@main
(e9b9e04d5163): <
https://commits.webkit.org/268579@main
> Reviewed commits have been landed. Closing PR #18213 and removing active labels.
Michael Catanzaro
Comment 3
2023-11-20 13:30:46 PST
So, I don't think libbacktrace actually installs a pkg-config file, so I'm thinking the `pkg_check_modules()` call here is guaranteed to fail. Am I wrong? I think it should be removed. I also notice this library has never released before ever. I am having second thoughts about depending on it by default. Maybe we should turn this OFF by default. I'm wondering if Ian has any plans to ever release it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug