[WPE][GTK] Symbolize `StackTrace` using `libbacktrace` https://bugs.webkit.org/show_bug.cgi?id=262104

Reviewed by Michael Catanzaro.

This patch adds a new `USE_LIBBACKTRACE` CMake option.
When enabled, `StackTraceSymbolResolver` will use `libbacktrace`[1]
to resolve addresses to function names.

[1] https://github.com/ianlancetaylor/libbacktrace

* Source/WTF/wtf/PlatformGTK.cmake:
* Source/WTF/wtf/PlatformWPE.cmake:
* Source/WTF/wtf/StackTrace.cpp:
(WTF::backtraceState):
(WTF::backtraceSyminfoCallback):
(WTF::backtraceFullCallback):
(WTF::symbolize):
* Source/WTF/wtf/StackTrace.h:
(WTF::StackTraceSymbolResolver::forEach const):
* Source/cmake/FindLibBacktrace.cmake: Added.
* Source/cmake/OptionsGTK.cmake:
* Source/cmake/OptionsWPE.cmake:

Canonical link: https://commits.webkit.org/268579@main